--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node tests/index.js",
+        "test:e2e": "node tests/e2e/app.test.js"
     },
     "dependencies": {
         "express": "^4.18.2",
@@ -18,7 +19,9 @@
         "crypto": "^1.0.1"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "playwright": "^1.39.0",
+        "assert": "^2.0.0"
     },
     "engines": {
         "node": ">=16.0.0"
