--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js",
-        "test": "node tests/index.js",
-        "test:e2e": "node tests/e2e/app.test.js"
+        "test": "node tests/unit/tma-auth.test.js",
+        "test:e2e": "npx playwright test",
+        "test:unit": "node tests/unit/tma-auth.test.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^7.5.0",
-        "jsonwebtoken": "^9.0.1",
-        "dotenv": "^16.3.1",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "helmet": "^7.0.0",
-        "crypto": "^1.0.1"
+        "jsonwebtoken": "^9.0.1",
+        "mongoose": "^7.5.0"
     },
     "devDependencies": {
+        "@playwright/test": "^1.52.0",
+        "assert": "^2.0.0",
         "nodemon": "^3.0.1",
-        "playwright": "^1.39.0",
-        "assert": "^2.0.0"
+        "playwright": "^1.39.0"
     },
     "engines": {
         "node": ">=16.0.0"
