feat: Интеграция реальных пользовательских данных из Telegram - Удалены тестовые пользователи из базы данных - Обновлена логика авторизации для сохранения реальных данных Telegram - Добавлен блок отображения информации о пользователе в интерфейсе - Обновлена логика профиля для работы с реальными данными сервера - Создан полноценный маршрут для работы с профилями пользователей

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "devDependencies": {
         "@playwright/test": "^1.52.0",
         "assert": "^2.0.0",
-        "nodemon": "^3.0.1",
-        "playwright": "^1.39.0"
+        "nodemon": "^3.0.1"
     },
     "engines": {
         "node": ">=16.0.0"
