--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "test:ui": "playwright test --ui"
     },
     "dependencies": {
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.3.1",
