--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
         "migrate-leaderboard": "node src/utils/migrateLeaderboard.js",
         "test": "playwright test",
         "test:headed": "playwright test --headed",
-        "test:ui": "playwright test --ui"
+        "test:ui": "playwright test --ui",
+        "optimize": "node scripts/optimize-frontend.js",
+        "build": "npm run optimize",
+        "prestart": "npm run build",
+        "analyze": "node scripts/analyze-bundle.js",
+        "security-check": "npm audit && node scripts/security-check.js"
     },
     "dependencies": {
         "compression": "^1.7.4",
@@ -18,6 +23,8 @@
         "crypto": "^1.0.1",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^7.4.1",
+        "express-validator": "^7.2.0",
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.5.0"
@@ -25,7 +32,10 @@
     "devDependencies": {
         "@playwright/test": "^1.52.0",
         "assert": "^2.0.0",
-        "nodemon": "^3.0.1"
+        "clean-css-cli": "^5.6.3",
+        "html-minifier-terser": "^7.2.0",
+        "nodemon": "^3.0.1",
+        "terser": "^5.36.0"
     },
     "engines": {
         "node": ">=16.0.0"
