--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
         "build": "npm run optimize",
         "prestart": "npm run build",
         "analyze": "node scripts/analyze-bundle.js",
-        "security-check": "npm audit && node scripts/security-check.js"
+        "security-check": "npm audit && node scripts/security-check.js",
+        "cleanup-debug": "node scripts/cleanup-debug.js",
+        "cleanup-debug-no-backup": "node scripts/cleanup-debug.js --no-backup",
+        "production-ready": "npm run cleanup-debug && npm run optimize && npm run security-check"
     },
     "dependencies": {
         "compression": "^1.7.4",
@@ -32,6 +35,7 @@
     "devDependencies": {
         "@playwright/test": "^1.52.0",
         "assert": "^2.0.0",
+        "clean-css": "^5.3.3",
         "clean-css-cli": "^5.6.3",
         "html-minifier-terser": "^7.2.0",
         "nodemon": "^3.0.1",
