--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "express-validator": "^7.2.0",
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.1",
-        "mongoose": "^7.5.0"
+        "mongoose": "^7.5.0",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
         "@playwright/test": "^1.52.0",
