🔧 Исправить автоудаление пользователей при запуске сервера - Отключено автоматическое удаление пользователей в seedDatabase() - Добавлен отдельный скрипт cleanup-test-users.js для ручной очистки - Добавлены npm скрипты: cleanup-test-users и cleanup-test-users-confirm - Исправлена основная причина проблем с авторизацией профиля - Теперь пользователи не теряются при перезапуске сервера

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "security-check": "npm audit && node scripts/security-check.js",
         "cleanup-debug": "node scripts/cleanup-debug.js",
         "cleanup-debug-no-backup": "node scripts/cleanup-debug.js --no-backup",
+        "cleanup-test-users": "node scripts/cleanup-test-users.js",
+        "cleanup-test-users-confirm": "node scripts/cleanup-test-users.js --confirm",
         "production-ready": "npm run cleanup-debug && npm run optimize && npm run security-check"
     },
     "dependencies": {
