--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "description": "Telegram Mini App игра-викторина с криминальными историями",
     "main": "src/index.js",
     "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js",
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js",
         "seed": "node src/utils/seedData.js",
         "migrate-leaderboard": "node src/utils/migrateLeaderboard.js",
-        "test": "playwright test",
+        "test": "echo \"Error: no test specified\" && exit 1",
         "test:headed": "playwright test --headed",
         "test:ui": "playwright test --ui",
         "optimize": "node scripts/optimize-frontend.js",
@@ -20,7 +20,8 @@
         "cleanup-debug-no-backup": "node scripts/cleanup-debug.js --no-backup",
         "cleanup-test-users": "node scripts/cleanup-test-users.js",
         "cleanup-test-users-confirm": "node scripts/cleanup-test-users.js --confirm",
-        "production-ready": "npm run cleanup-debug && npm run optimize && npm run security-check"
+        "production-ready": "npm run cleanup-debug && npm run optimize && npm run security-check",
+        "migrate-users": "node scripts/migrate-user-data.js"
     },
     "dependencies": {
         "compression": "^1.7.4",
