--- a/package.json
+++ b/package.json
@@ -50,16 +50,17 @@
     "author": "Criminal Bluff Team",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^7.5.0",
-        "jsonwebtoken": "^9.0.2",
         "bcryptjs": "^2.4.3",
-        "cors": "^2.8.5",
-        "helmet": "^7.0.0",
-        "express-rate-limit": "^6.10.0",
         "compression": "^1.7.4",
-        "morgan": "^1.10.0",
-        "dotenv": "^16.3.1"
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^6.10.0",
+        "express-validator": "^7.2.1",
+        "helmet": "^7.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.5.0",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "@playwright/test": "^1.37.1",
