feat: настроена компиляция frontend TypeScript файлов - Создана папка public/dist для скомпилированных JS файлов - Обновлены пути в HTML файлах с ./ на ./dist/ - Добавлены npm скрипты build:frontend и build:all - Исключена public/dist из основной TypeScript компиляции - Решена проблема загрузки JS файлов в браузере

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "Telegram Mini App игра-викторина с криминальными историями",
     "main": "dist/src/index.js",
     "scripts": {
-        "start": "npm run ts:build && node dist/src/index.js",
-        "dev": "npm run ts:build && nodemon dist/src/index.js",
-        "dev:ts": "nodemon --exec \"npm run ts:build && node dist/src/index.js\"",
-        "build": "npm run ts:build",
+        "start": "npm run build:all && node dist/src/index.js",
+        "dev": "npm run build:all && nodemon dist/src/index.js",
+        "dev:ts": "nodemon --exec \"npm run build:all && node dist/src/index.js\"",
+        "build": "npm run build:all",
         "seed": "npm run ts:build && node dist/src/utils/seedData.js",
         "migrate-leaderboard": "npm run ts:build && node dist/src/utils/migrateLeaderboard.js",
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,6 +30,8 @@
         "ts:build": "tsc",
         "ts:watch": "tsc --watch",
         "ts:clean": "rimraf dist",
+        "build:frontend": "tsc --project public/tsconfig.json --outDir public/dist --declaration false --sourceMap false",
+        "build:all": "npm run ts:build && npm run build:frontend",
         "ts:start": "npm run ts:build && node dist/src/index.js",
         "ts:dev": "nodemon --exec \"npm run ts:build && node dist/src/index.js\"",
         "type-check": "tsc --noEmit --skipLibCheck",
