--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,7 @@
     "exclude": [
         "node_modules",
         "dist",
+        "public/dist",
         "build",
         "coverage",
         "*.config.js",
